@@ -1920,17 +1920,11 @@ same: print_error( c_ast_params_loc( ast ),
     // count objects and lvalue references to objects distinctly to check
     // default relational operators in C++20.
     //
-    c_ast_t const *param_ast = c_ast_untypedef( c_param_ast( param ) );
+    c_ast_t const *param_ast = c_ast_unreference_any( c_param_ast( param ) );
     switch ( param_ast->kind ) {
       case K_CLASS_STRUCT_UNION:
       case K_ENUM:
         ++ecsu_param_count;
-        break;
-      case K_REFERENCE:
-      case K_RVALUE_REFERENCE:
-        param_ast = c_ast_unreference_any( param_ast );
-        if ( (param_ast->kind & K_ANY_ECSU) != 0 )
-          ++ecsu_param_count;
         break;
       default:
         /* suppress warning */;
